# goit-py_web-hw-14

./: README.md
FastAPI/: docker-compose.yml  main.py  pyproject.toml
FastAPI/alembic/: env.py
FastAPI/alembic/versions/: 35cd1dca6e44_init.py  4348ce63cb24_add_confirm.py  9f90d1080388_fix.py
FastAPI/docs/: conf.py  index.rst
FastAPI/postgres-data/base/1/: 2619  pg_internal.init
FastAPI/postgres-data/base/16384/: 1247  1249  1259  16393  16396  16405  16409  16410  16412  16414  16417  16424  16425  16426  2579  2606  2608  2610  2619  2620  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  3501  3502  (+3 more)
FastAPI/postgres-data/base/4/: 2619
FastAPI/postgres-data/base/5/: pg_internal.init
FastAPI/postgres-data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
FastAPI/postgres-data/pg_stat/: pgstat.stat
FastAPI/postgres-data/pg_xact/: 0000
FastAPI/src/config/: config.py
FastAPI/src/database/: db.py
FastAPI/src/entity/: models.py
FastAPI/src/repository/: contacts.py  users.py
FastAPI/src/routes/: auth.py  contacts.py  users.py
FastAPI/src/schemas/: contacts.py  user.py
FastAPI/src/services/: auth.py  email.py
FastAPI/src/services/templates/: reset_password.html  verify_email.html
FastAPI/tests/: test_unit_repository_contacts.py  test_unit_repository_users.py  test_users.py
