[tool.poetry]
name = "goit-py-web-hw-11"
version = "0.1.0"
description = ""
authors = ["Serge-Moskalenko <skmos2019@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
alembic = "^1.15.2"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
email-validator = "^2.2.0"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
cloudinary = "^1.44.0"
fastapi-limiter = "^0.1.6"
pydantic = "^2.11.3"
fastapi-mail = "^1.4.2"
redis = "^5.2.1"
pydantic-settings = "^2.8.1"
bcrypt = "^4.3.0"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
